# Copyright © 2019 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "rustsy"
version = "0.3.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
edition = "2021"

[dependencies]
hound = "3.4.0"
midir = "0.7.0"
wmidi = "4.0.6"
dsp = "0.10.2"
once_cell = "1.10.0"
portaudio-rs = "0.3.2"
structopt = "0.3.26"

[features]
